# matrix-client

./: pyproject.toml
matrix_client/: client.py  exceptions.py
matrix_client/api/: __init__.py  auth.py  http_methods.py  server_discovery.py
matrix_client/types/: auth.py  client_versions.py  errors.py  well_known.py
tests/: test_client.py
